@@ -1,0 +1,38 @@
+<% @mailing = @object %>
+
+<div id="event_<%= @event.id %>_comments_long" style="display:none">
+
+  <p>
+    <b>Berlin:</b>
+    <%= @mailing.berlin %>
+  </p>
+
+  <p>
+    <b>ESS:</b>
+    <%= @mailing.ess %>
+  </p>
+
+  <p>
+    <b>Eligibility:</b>
+    <%= @mailing.eligibility %>
+  </p>
+
+  <p>
+    <b>Exclusion:</b>
+    <%= @mailing.exclusion_name %>
+  </p>
+
+  <p>
+    <b>Participation:</b>
+    <%= @mailing.participation_name %>
+  </p>
+
+  <p>
+    <b>Risk factors:</b>
+    <ul>
+      <% @mailing.risk_factors.each do |choice| %>
+        <li><%= @choice = choice; render partial: 'choices/show' %> <%= choice.description %></li>
+      <% end %>
+    </ul>
+  </p>
+</div>
