@@ -1,0 +1,33 @@
+<% @prescreen = @object %>
+
+<div id="event_<%= @event.id %>_comments_long" style="display:none">
+
+  <p>
+    <b>Clinic:</b>
+    <%= @prescreen.clinic.name %>
+  </p>
+
+  <p>
+    <b>Cardiologist:</b>
+    <%= @prescreen.doctor.name %>
+  </p>
+
+  <p>
+    <b>Eligibility:</b>
+    <%= @prescreen.eligibility %>
+  </p>
+
+  <p>
+    <b>Exclusion:</b>
+    <%= @prescreen.exclusion_name %>
+  </p>
+
+  <p>
+    <b>Risk factors:</b>
+    <ul>
+      <% @prescreen.risk_factors.each do |choice| %>
+        <li><%= @choice = choice; render partial: 'choices/show' %> <%= choice.description %></li>
+      <% end %>
+    </ul>
+  </p>
+</div>
